--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "author": "Abdullah bin Kasim <abdullah.kasim.123@gmail.com> (https://github.com/abdullah-kasim)",
   "ava": {
     "failFast": true,
-    "verbose": true
+    "verbose": true,
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   },
   "bugs": {
     "url": "https://github.com/abdullah-kasim/node-interview-test/issues",
@@ -19,17 +26,36 @@
   "contributors": [
     "Abdullah bin Kasim <abdullah.kasim.123@gmail.com> (https://github.com/abdullah-kasim)"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "fastify": "^2.1.0",
+    "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.1.0",
+    "sequelize-typescript": "^1.0.0-alpha.9"
+  },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
+    "@types/dotenv": "^6.1.0",
+    "@types/sequelize": "^4.27.44",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
     "ava": "latest",
     "codecov": "latest",
     "cross-env": "latest",
-    "eslint": "latest",
+    "eslint": "^5.15.3",
     "eslint-config-prettier": "latest",
+    "eslint-config-xo": "^0.26.0",
     "eslint-config-xo-lass": "latest",
+    "eslint-config-xo-typescript": "^0.9.0",
+    "eslint-plugin-ava": "^5.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-no-use-extend-native": "^0.4.0",
     "eslint-plugin-prettier": "latest",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-unicorn": "^7.1.0",
     "fixpack": "latest",
     "husky": "latest",
     "lint-staged": "latest",
@@ -37,7 +63,10 @@
     "prettier": "latest",
     "remark-cli": "latest",
     "remark-preset-github": "latest",
-    "xo": "latest"
+    "sequelize-cli": "^5.4.0",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000",
+    "xo": "^0.24.0"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -70,7 +99,7 @@
       ]
     }
   },
-  "main": "index.js",
+  "main": "index.ts",
   "nyc": {
     "check-coverage": true,
     "lines": 10,
@@ -108,8 +137,10 @@
   "xo": {
     "prettier": true,
     "space": true,
+    "semicolon": false,
     "extends": [
-      "xo-lass"
+      "xo-lass",
+      "xo-typescript"
     ]
   }
 }
