--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "xo && remark . -qfo",
     "nyc": "cross-env NODE_ENV=test nyc ava",
-    "test": "npm run lint && npm run ava",
+    "test": "cross-env",
     "test-coverage": "npm run lint && npm run nyc"
   },
   "xo": {
