--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_URL="http://localhost:3000"
 APP_PORT="3000"
 
-DB_USERNAME="docker"
+DB_USERNAME="postgres"
 DB_PASSWORD="docker"
 DB_DATABASE="todo"
 DB_SCHEMA="todo"
