feat(boilerplate): add startup scripts for debug and prod
Also got the server running, along with the database.

--- a/package.json
+++ b/package.json
@@ -57,9 +57,12 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-unicorn": "^7.1.0",
     "fixpack": "latest",
+    "forever": "^0.15.3",
     "husky": "latest",
+    "kill-port": "^1.3.2",
     "lint-staged": "latest",
     "nyc": "latest",
+    "pm2": "^3.4.0",
     "prettier": "latest",
     "remark-cli": "latest",
     "remark-preset-github": "latest",
@@ -129,8 +132,11 @@
   "scripts": {
     "ava": "cross-env NODE_ENV=test ava",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "debug": "forever -w --watchDirectory='./src' -c 'node --inspect=0.0.0.0 -r ts-node/register' src/server.ts",
     "lint": "xo && remark . -qfo",
     "nyc": "cross-env NODE_ENV=test nyc ava",
+    "postinstall": "./node_modules/.bin/pm2 install typescript",
+    "prod": "pm2 start pm2/production.config.ts",
     "test": "cross-env",
     "test-coverage": "npm run lint && npm run nyc"
   },
