feat(boilerplate): abandoning sequelize-cli and migrations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   "rules": {
     "indent": "off",
     "semi": "off",
+    "unicorn/filename-case": "off",
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/semi": "off"
   }
