--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "fastify": "^2.1.0",
+    "firebase-admin": "^7.1.1",
     "knex": "^0.16.3",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
