feat(auth): add auth service for register, login, logout

--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "Abdullah bin Kasim <abdullah.kasim.123@gmail.com> (https://github.com/abdullah-kasim)"
   ],
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "express-jwt": "^5.3.1",
     "fastify": "^2.1.0",
     "firebase-admin": "^7.1.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
+    "moment": "^2.24.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "reflect-metadata": "^0.1.13",
@@ -40,8 +45,13 @@
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
+    "@types/express-jwt": "^0.0.42",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/knex": "^0.16.1",
+    "@types/moment": "^2.13.0",
     "@types/sequelize": "^4.27.44",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
