--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
   },
   "scripts": {
     "ava": "cross-env NODE_ENV=test ava",
+    "ava-debug": "cross-env NODE_ENV=test node --inspect=0.0.0.0 ./node_modules/.bin/ava --serial",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "debug": "forever -w --watchDirectory='./src' -c 'node --inspect=0.0.0.0 -r ts-node/register' src/server.ts",
     "lint": "xo && remark . -qfo",
