feat(auth): add nodemailer dependency for mailing reset passwords

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_SCHEMA="todo"
 DB_HOST="127.0.0.1"
 DB_PORT="15432"
 DB_DIALECT="postgres"
+SMTP_IP="localhost"
+SMTP_PORT="1025"
+EMAIL_ADDRESS="info@example.com"
