--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "moment": "^2.24.0",
+    "nodemailer": "^6.0.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "reflect-metadata": "^0.1.13",
@@ -52,6 +53,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/knex": "^0.16.1",
     "@types/moment": "^2.13.0",
+    "@types/nodemailer": "^4.6.7",
     "@types/sequelize": "^4.27.44",
     "@types/sinon": "^7.0.10",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
