--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_SCHEMA="todo"
 DB_HOST="127.0.0.1"
 DB_PORT="15432"
 DB_DIALECT="postgres"
-SMTP_IP="localhost"
+SMTP_HOST="localhost"
 SMTP_PORT="1025"
+SMTP_SECURE="FALSE"
 EMAIL_ADDRESS="info@example.com"
