--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase-admin": "^7.1.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nodemailer": "^6.0.0",
     "pg": "^7.9.0",
@@ -52,6 +53,7 @@
     "@types/express-jwt": "^0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/knex": "^0.16.1",
+    "@types/lodash": "^4.14.123",
     "@types/moment": "^2.13.0",
     "@types/nodemailer": "^4.6.7",
     "@types/sequelize": "^4.27.44",
