--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "codecov": "latest",
     "cross-env": "latest",
     "eslint": "^5.15.3",
-    "eslint-config-prettier": "latest",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-config-xo-lass": "latest",
     "eslint-config-xo-typescript": "^0.9.0",
@@ -82,6 +82,7 @@
     "nyc": "latest",
     "pm2": "^3.4.0",
     "prettier": "latest",
+    "prettier-eslint": "^8.8.2",
     "remark-cli": "latest",
     "remark-preset-github": "latest",
     "sequelize-cli": "^5.4.0",
@@ -108,6 +109,10 @@
   "lint-staged": {
     "linters": {
       "*.js": [
+        "xo --fix",
+        "git add"
+      ],
+      "*.ts": [
         "xo --fix",
         "git add"
       ],
