feat(base): use prettier --write because xo is finicky

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   "homepage": "https://github.com/abdullah-kasim/node-interview-test",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test",
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -110,10 +110,12 @@
     "linters": {
       "*.js": [
         "xo --fix",
+        "prettier --write",
         "git add"
       ],
       "*.ts": [
         "xo --fix",
+        "prettier --write",
         "git add"
       ],
       "*.md": [
