--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "pg-hstore": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.1.0",
-    "sequelize-typescript": "^1.0.0-alpha.9"
+    "sequelize-typescript": "^1.0.0-alpha.9",
+    "serialize-javascript": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
@@ -57,6 +58,7 @@
     "@types/moment": "^2.13.0",
     "@types/nodemailer": "^4.6.7",
     "@types/sequelize": "^4.27.44",
+    "@types/serialize-javascript": "^1.5.0",
     "@types/sinon": "^7.0.10",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
