--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "@typescript-eslint/semi": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-extraneous-class": "off",
-    "@typescript-eslint/member-delimiter-style": "off"
+    "@typescript-eslint/member-delimiter-style": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "padding-line-between-statements": "off"
   }
 }
