feat(base): test commit without ;

--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
   "xo": {
     "prettier": true,
     "space": true,
+    "semi": false,
     "semicolon": false,
     "extends": [
       "xo-lass",
