--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-jwt": "^5.3.1",
     "fastify": "^2.1.0",
     "firebase-admin": "^7.1.1",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
@@ -52,6 +53,7 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express-jwt": "^0.0.42",
+    "@types/joi": "^14.3.2",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.123",
