--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,22 +16,25 @@
     "prettier"
   ],
   "rules": {
-    "indent": "off",
-    "semi": "off",
-    "new-cap": "off",
-    "max-params": "off",
-    "no-await-in-loop": "off",
-    "import/no-unresolved": "off",
-    "unicorn/catch-error-name": "off",
-    "no-return-await": "off",
-    "unicorn/filename-case": "off",
-    "@typescript-eslint/indent": ["error", 2],
-    "object-curly-spacing": "off",
-    "@typescript-eslint/semi": "off",
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-extraneous-class": "off",
+    "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/member-delimiter-style": "off",
+    "@typescript-eslint/no-extraneous-class": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "padding-line-between-statements": "off"
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "ava/no-ignored-test-files": "off",
+    "import/no-unresolved": "off",
+    "indent": "off",
+    "max-params": "off",
+    "new-cap": "off",
+    "no-await-in-loop": "off",
+    "no-return-await": "off",
+    "object-curly-spacing": "off",
+    "padding-line-between-statements": "off",
+    "promise/valid-params": "off",
+    "semi": "off",
+    "unicorn/catch-error-name": "off",
+    "unicorn/filename-case": "off"
   }
 }
