--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "ava/no-ignored-test-files": "off",
     "import/no-unresolved": "off",
+    "import/no-unassigned-import": "off",
     "indent": "off",
     "max-params": "off",
     "new-cap": "off",
@@ -35,6 +36,7 @@
     "promise/valid-params": "off",
     "semi": "off",
     "unicorn/catch-error-name": "off",
-    "unicorn/filename-case": "off"
+    "unicorn/filename-case": "off",
+    "unicorn/no-abusive-eslint-disable": "off"
   }
 }
