--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.123",
     "@types/moment": "^2.13.0",
+    "@types/node": "^11.12.2",
     "@types/nodemailer": "^4.6.7",
     "@types/sequelize": "^4.27.44",
     "@types/serialize-javascript": "^1.5.0",
     "@types/sinon": "^7.0.10",
     "@types/uuid": "^3.4.4",
+    "@types/validator": "^10.11.0",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "ava": "latest",
