--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^7.0.0",
     "express-jwt": "^5.3.1",
     "fastify": "^2.1.0",
+    "fastify-cors": "^2.1.2",
     "firebase-admin": "^7.1.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -55,6 +56,7 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express-jwt": "^0.0.42",
+    "@types/fastify-cors": "^2.1.0",
     "@types/joi": "^14.3.2",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/knex": "^0.16.1",
