feat(base): add docs for setting the project app

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_KEY="32CharacterAsciiStringGoesHereTryKeepass"
+# 32 characters for app key - try keepass if you want to generate one!
+APP_KEY="MqNt3Ux4r3joWFHSW6U6gmGkqKJ5gzAC"
 APP_PORT="3000"
 APP_URL="http://localhost:3000"
 DB_DATABASE="todo"
