feat(base): ignore models for coverage measurement

--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
       "coverage/**/*",
       "pm2/**/*",
       "src/migrations/**/*",
+      "src/models/**/*",
       "src/seeders/**/*"
     ],
     "all": true,
