--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   ],
   "rules": {
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/indent": "off",
     "@typescript-eslint/member-delimiter-style": "off",
     "@typescript-eslint/no-extraneous-class": "off",
     "@typescript-eslint/no-unused-vars": "off",
